# dotfiles

./: .env  .gh-issue-defaults.yml  .gitattributes  .gitignore  .gitmessage  .markdownlint.json  .shellcheckrc  AGENTS.md  AGENTS_md_Master_Prompt.md  ARCHITECTURE.md  CHANGELOG_SOLID_REFACTOR.md  CLAUDE.md  GEMINI.md  PORTS.md  README.md  REFACTORING_SETUP_SH.md  SETUP_GUIDE.md  check_bash_status.sh  gemini.md  install.sh  install_bash_env.py  mise.toml  pyproject.toml  requirements.txt  setup.sh  tox.ini
.debug/: test_install_opencode.sh
.github/: pull_request_template.md
.secrets/: .dotfiles-backup-key.txt  gpg-backup-6424E0492E0ECEA1.asc.gpg
.understand-anything/: .understandignore  domain-graph.json  knowledge-graph.json  meta.json
agy/: AGENTS.md  setup.sh
apt/: sources.list.jammy  sources.list.jammy.internal
aws/: AGENTS.md  README.md  aws-config.example  aws.local.example  diagnose.sh  install-otel-managed-settings.sh  setup.sh
bash/: AGENTS.md  README.md  analyze_bash_scripts.sh  main.bash  profile.bash  setup.sh
bun/: bunfig.toml.external  bunfig.toml.internal
cargo/: config.toml.internal
claude/: AGENTS.md  CLAUDE.md  README.md  feature-agent.md  req-implementation-agent.md  req-orchestrator-agent.md  req-spec-agent.md  req-test-design-agent.md  settings.bedrock-overlay.example  settings.json  settings.local.bedrock.example  settings.local.example.json  settings.local.json  settings.local.json.example  settings.template.json  setup.sh  statusline-command.sh  tox-agent.md
docs/: AGENTS.md  AGENTS_md_Master_Prompt.md  AGENTS_md_Master_Prompt_C.md  AGENTS_md_Master_Prompt_CX.md  AGENTS_md_Master_Prompt_G.md  OPENCODE_SETUP_GUIDE.md  SETUP_GUIDE.md  TEAM-GIT-GUIDE.md  abc-review-C-improvements.md  abc-review-C.md  abc-review-C2.md  abc-review-CX.md  abc-review-CX2.md  abc-review-G.md  abc-review-G2.md  abc-review-O.md  abc-review-code-quality-improvements.md  dotfiles-setup-guide.html  postgresql-review-QUICK-REF.md  refactor-bootstrap-cmd-review-C.md  refactor-bootstrap-cmd-review-CX.md  test-results-P0.md  todo.txt
font/: WINDOWS_FONT_INSTALL.md  install-fonts.bat  install-fonts.ps1
gemini/: GEMINI.md  setup.sh
gh/: config.yml  setup.sh
ghostty/: config
git/: .git-credentials  .gitconfig  AGENTS.md  git_ssh_setup_guide.md  setup.sh
mytool/: AGENTS.md  check_ux_consistency.sh  demo_ux.sh  docker-configure-proxy.sh  enable-docker.sh  get_hw_info.sh  gpu_status.sh  install-bat.sh  install-claude.sh  install-codex.sh  install-docker.sh  install-fasd.sh  install-fd.sh  install-fzf.sh  install-gemini.sh  install-git-crypt.sh  install-git-secret.sh  install-meslo-font.bat  install-meslo-font.ps1  install-npm.sh  install-nvm.sh  install-p10k.sh  install-pet.sh  install-postgresql.sh  install-powerlevel10k.sh  install-python.sh  install-ripgrep.sh  install-uv.sh  install-zsh.sh  repo_stats.sh  run-AGENTS_md_Master_Prompt.sh  set-locale.sh  setup-crt.sh  setup-gpg-cache.sh  setup-new-pc.sh  (+5 more)
(+1563 files in other folders)
