# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


# --- 프로젝트 기본 정보 ---
[project]
requires-python = ">=3.10"
version = "0.1.0"
name = "dotfiles"
description = "Opinionated Bash dotfiles for reproducible terminal environments across WSL, Linux, and macOS."
authors = [{ name = "BW-Yoon", email = "byoungwoo.yoon@samsung.com" }]
dependencies = [
    "rich>=14.1.0",
]  # No runtime Python dependencies needed for bash dotfiles


# --- 개발 및 테스트 환경 의존성 ---
[dependency-groups] # 비표준으로 uv 에서는 인식, 그러나 pip 인식못함
dev = ["ruff", "mypy", "pylint-exit", "pytest", "pytest-mock", "tox>=4.26.0"]


# --- mypy 타입 스터브 ---
[project.optional-dependencies]
dev = [
    # mypy 타입 스터브 (types-*)
    "types-toml",
    "types-requests",
    "types-PyYAML",
    # 필요하다면 다른 mypy 관련 타입 스터브 추가
    # 예: "types-setuptools", "types-cachetools" 등
]


[tool.setuptools]
# No Python packages in this bash dotfiles project
packages = []


# [[tool.uv.index]]
# name = "samsung"
# url = "http://repo.samsungds.net:8081/artifactory/api/pypi/pypi/simple"
# default = true


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.black]
line-length = 120
target-version = ['py310', 'py311', "py312", "py313"]
skip-string-normalization = false
exclude = '\.git|\.mypy_cache|\.tox|\.nox|\.venv|build|dist'


[tool.isort]
profile = "black"


[tool.pylint]
max-line-length = 120
ignore = [".venv", ".tox", ".vscode", ".git", "build"]
# R, C 비활성화는 신중하게 접근해야 합니다.
# 초기에는 비활성화하되, 점진적으로 활성화하여 코드 개선을 유도하는 것이 좋습니다.
# 만약 활성화 시 너무 많은 경고가 발생한다면, 특정 규칙만 disable 하세요.
disable = ["R", "C", "W1203"]
# disable = ["W1203"] # f-string 경고만 비활성화


[tool.mypy]
files = ["./"]
# 엄격한 타입 검사를 위한 추가 옵션들 (권장)
strict = true # 모든 엄격 모드 활성화 (가장 강력)
disallow_untyped_defs = false # 타입 힌트가 없는 함수 정의에 경고
disallow_untyped_calls = false # 타입 힌트가 없는 함수 호출에 경고

# 만약 strict=true 가 너무 부담스럽다면 개별 옵션 활성화
# no_implicit_optional = true # None을 허용하려면 명시적으로 Optional[Type] 사용
# warn_return_any = true # Any를 반환하는 함수에 경고
# warn_unused_ignores = true # 불필요한 # type: ignore 주석에 경고
# disallow_incomplete_defs = true # 일부 타입 힌트가 누락된 함수 정의에 경고
# check_untyped_defs = true # 타입 힌트가 없는 함수 내부도 검사

# mypy 검사에서 제외할 디렉터리 및 파일 패턴 (정규 표현식)
# (?x) 플래그는 정규 표현식 내에서 공백과 주석을 허용하여 가독성을 높입니다.
exclude = '(?x)( \.venv/ | \.tox/ | \.vscode/ | \.git/ | build/ | config/tox/ | tests )'


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".mypy_cache", ".tox", ".nox", ".venv", "build", "dist", ".vscode"]

[tool.ruff.lint]
# E, F: pyflakes/pycodestyle 기본 규칙
# W: 경고
# I: isort (import 정렬)
# UP: pyupgrade (최신 파이썬 문법 자동 변환)
select = ["E", "F", "W", "I", "UP"]
# pylint의 W1203 (logging-fstring-interpolation)에 해당하는 ruff 규칙(G004) 비활성화
ignore = ["G004"]

[tool.ruff.format]
# black과 호환되는 포맷팅 설정
quote-style = "double"
# skip-string-normalization = false
